2009-09-16 Harri Pitkänen <hatapitk@iki.fi>

	* Improve grammar error descriptions.
	* Ship autogen.sh in the source package.
	* Add char * based APIs for morphological analysis.
	* Limit the amount of results and length of word in
	  in morphological analysis.

2009-09-15 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>

	* Check the return value from getcwd.

2009-09-13 Harri Pitkänen <hatapitk@iki.fi>

	* Return BASEFORM from morphological analysis if possible.
	  Requires debug version of suomi-malaga.
	* Return WORDIDS and WORDBASES from morphological analysis
	  if possible.

2009-09-12 Harri Pitkänen <hatapitk@iki.fi>

	* Improve spelling suggestion by sorting them
	  according to information from morphological analysis.

2009-09-11 Harri Pitkänen <hatapitk@iki.fi>

	* Add directory for Finnish design documentation.

2009-09-10 Harri Pitkänen <hatapitk@iki.fi>

	* Handle left double quotation mark better in grammar
	  checker. It is still flagged as an error.

2009-09-10 Lauri Nurmi <lanurmi@iki.fi>

	* Replace TRUE and FALSE with true and false.

2009-09-09 Harri Pitkänen <hatapitk@iki.fi>

	* Add replacement a -> e to spelling suggestions.
	* Add double character replacements.

2009-09-06 Harri Pitkänen <hatapitk@iki.fi>

	* Add more features to the Python interface.

2009-09-05 Harri Pitkänen <hatapitk@iki.fi>

	* Clear grammar checker cache when options are
	  changed.
	* Switched to using internal implementation of malaga.

2009-09-04 Harri Pitkänen <hatapitk@iki.fi>

	* Add Pyunit tests for the Python interface.

2009-07-29 Harri Pitkänen <hatapitk@iki.fi>

	* Add (yet incomplete) Python interface.

2009-07-27 Harri Pitkänen <hatapitk@iki.fi>

	* Increase version number to 2.2.
	* Add virtual destructors to abstract base classes.

2009-07-23 Harri Pitkänen <hatapitk@iki.fi>

	* Switch to dictionary format 2.
	* Parse field "sijamuoto" during analysis.
	* Parse field "luokka" during analysis.

2009-07-22 Harri Pitkänen <hatapitk@iki.fi>
